// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonIcon /> by default matches with snapshot 1`] = `
<button
  className="sc-bdVaJa MVkmT sc-htpNat eNOWYY k-ButtonIcon"
>
  <svg
    className="k-ButtonIcon__svg"
  />
</button>
`;

exports[`<ButtonIcon /> className prop matches with snapshot 1`] = `
<button
  className="sc-bdVaJa MVkmT sc-htpNat eNOWYY k-ButtonIcon test_className_prop"
>
  <svg
    className="k-ButtonIcon__svg"
  />
</button>
`;

exports[`<ButtonIcon /> modifier prop matches with snapshot 1`] = `
<button
  className="sc-bdVaJa dGjTkf sc-htpNat eNOWYY k-ButtonIcon"
>
  <svg
    className="k-ButtonIcon__svg"
  />
</button>
`;

exports[`<ButtonIcon /> rounded prop matches with snapshot 1`] = `
<button
  className="sc-bdVaJa dXWuit sc-htpNat eNOWYY k-ButtonIcon"
>
  <svg
    className="k-ButtonIcon__svg"
  />
</button>
`;

exports[`<ButtonIcon /> size prop matches with snapshot 1`] = `
<button
  className="sc-bdVaJa DMqca sc-htpNat eNOWYY k-ButtonIcon k-ButtonIcon--nano"
>
  <svg
    className="k-ButtonIcon__svg"
  />
</button>
`;

exports[`<ButtonIcon /> tag prop matches with snapshot 1`] = `
<button
  className="sc-bdVaJa MVkmT sc-htpNat eNOWYY k-ButtonIcon"
>
  <svg
    className="k-ButtonIcon__svg"
  />
</button>
`;

exports[`<ButtonIcon /> with tag="a" and no href matches with snapshot 1`] = `
<button
  className="sc-bdVaJa MVkmT sc-htpNat eNOWYY k-ButtonIcon"
>
  <svg
    className="k-ButtonIcon__svg"
  />
</button>
`;

exports[`<ButtonIcon /> with tag="a" href="foo" matches with snapshot 1`] = `
<button
  className="sc-bdVaJa MVkmT sc-htpNat eNOWYY k-ButtonIcon"
  href="foo"
>
  <svg
    className="k-ButtonIcon__svg"
  />
</button>
`;

exports[`<ButtonIcon /> without children matches with snapshot 1`] = `
<button
  className="sc-bdVaJa MVkmT sc-htpNat eNOWYY k-ButtonIcon"
/>
`;
